fix: viewport width on mobile

--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   position: fixed;
-  right: 0;
+  left: 0;
   top: 0;
   width: 100%;
   background-color: $color-white;
