--- a/src/styles/typography/_titles.scss
+++ b/src/styles/typography/_titles.scss
@@ -9,10 +9,10 @@
   justify-content: center;
   flex-direction: row;
   align-items: center;
-  min-width: 500px;
   border-bottom: 2px solid $color-primary;
   gap: 1.25rem;
-  padding: 1rem;
+  padding: 1rem 0;
+  width: 80%;
   margin-bottom: 1.85rem;
   margin-top: 5rem;
 
